test-suite/tests/fail/ui/designated/missing_designated_argument.stderr
error: no argument matches the designated parameter
 --> tests/fail/ui/designated/missing_designated_argument.rs:9:27
  |
9 | impl<#[stated] S, T> Test<T> {}
  |                           ^
